--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <gson.version>2.10.1</gson.version>
         <logback.version>1.5.14</logback.version>
         <lombok.version>1.18.38</lombok.version>
@@ -26,7 +26,12 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>2.3.17.Final</version>
+            <version>2.3.18.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.threads</groupId>
+            <artifactId>jboss-threads</artifactId>
+            <version>3.9.1</version>
         </dependency>
 
         <!-- Logback 명시적으로 추가 -->
@@ -41,13 +46,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.12</version>
-        </dependency>
-
-        <!-- Jansi 라이브러리 추가 (로그 컬러 지원) -->
-        <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
-            <version>2.4.1</version>
         </dependency>
 
         <!-- Gson 라이브러리 추가 -->
@@ -87,8 +85,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
