--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>anthropic-java</artifactId>
             <version>2.0.0</version>
         </dependency>
+
+        <!-- Jetbrains 어노테이션 -->
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>26.0.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
